=== JavaScriptCore-312.3.2 ===

2006-04-17  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-1-3-branch

    2006-02-16  Tim Omernick  <timo@apple.com>

        Reviewed by Geoff.

        <rdar://problem/4428609> Flash Player 8.0.22 can crash Safari (and WebKit apps) with
        javascript disabled (7015)

        * bindings/NP_jsobject.cpp:
        (_NPN_CreateNoScriptObject):
        Returns an NPObject which is not bound to a JavaScript object.  This kind of NPObject
        can be given to a plugin as the "window script object" when JavaScript is disabled.
        The object has a custom NPClass, NPNoScriptObjectClass, which has no defined methods.
        Because of this, none of the NPN_* functions called by the plugin on this "no script
        object" will cause entry into JavaScript code.
        (_NPN_InvokeDefault):
        Make sure the NPVariant is filled before returning from this function.  This never
        mattered before because we never reached this case, having only created NPObjects of
        the class NPScriptObjectClass.
        (_NPN_Invoke):
        ditto
        (_NPN_Evaluate):
        ditto
        (_NPN_GetProperty):
        ditto

        * bindings/NP_jsobject.h:
        Declared _NPN_CreateNoScriptObject().

=== JavaScriptCore-312.3.1 ===

2006-01-05  Timothy Hatcher  <timothy@apple.com>

        Merges fixes from TOT to Safari-1-3-branch

    2005-12-19  Geoffrey Garen  <ggaren@apple.com>
  
        Reviewed by Maciej.

        Fixed <rdar://problem/4370397> Missing return statement in
        JSMethodNameToObjcMethodName.

        JSMethodNameToObjcMethodName had a check for a name being too long, but
        the check was missing a return statement.

        A lot of this code was confusing and some of it was wrong, so I fixed
        it up, added some asserts to catch this type of bug in the future, 
        changed some comments, and renamed some variables.
