@@ -1,3 +1,13 @@
+=== JavaScriptCore-312.3.3 ===
+
+2007-07-24  Mark Rowe  <mrowe@apple.com>
+
+        Merge fix for <rdar://problems/5355025&5355062>.
+
+        * pcre/pcre.c:
+        (compile_branch):
+        (pcre_compile):
+
 === JavaScriptCore-312.3.2 ===
 
 2006-04-17  Timothy Hatcher  <timothy@apple.com>
